# auditree-prune

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: new-collaborator.md
prune/: __init__.py  cli.py  locker.py
test/: __init__.py  test_cli.py  test_prune_locker.py
test/fixtures/: faux_config.json
